--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -11,10 +11,10 @@ jobs:
       uses: actions/checkout@v2
 
     - name: Run Bash Script Test
-      run: bash ./labs/1_lab/script.bash
+      run: bash labs/1_lab/script.bash
 
     - name: Run Python Test for Script 1
-      run: python ./labs/1_lab/tester_1.py
+      run: python labs/1_lab/tester_1.py
 
   test_script2:
     runs-on: ubuntu-latest
@@ -24,10 +24,10 @@ jobs:
       uses: actions/checkout@v2
 
     - name: Run Bash Script Test
-      run: bash ./labs/2_lab/script.bash
+      run: bash labs/2_lab/script.bash
 
     - name: Run Python Test for Script 2
-      run: python ./labs/2_lab/tester_2.py
+      run: python labs/2_lab/tester_2.py
 
   test_script3:
     runs-on: ubuntu-latest
@@ -37,8 +37,8 @@ jobs:
       uses: actions/checkout@v2
 
     - name: Run Bash Script Test
-      run: bash ./labs/3_lab/script.bash
+      run: bash labs/3_lab/script.bash
 
     - name: Run Python Test for Script 3
-      run: python ./labs/3_lab/tester_3.py
+      run: python labs/3_lab/tester_3.py
     
