--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -10,6 +10,14 @@ jobs:
     - name: Check out code
       uses: actions/checkout@v2
 
+    - name: Setup Python Version
+      uses: actions/setup-python@v2
+      with:
+        python-version: 3.9
+
+    - name: Install Python dependencies
+      run: python -m pip install --upgrade pip requests 
+
     - name: Run Bash Script Test
       run: bash labs/1_lab/script.bash
 
@@ -23,6 +31,14 @@ jobs:
     - name: Check out code
       uses: actions/checkout@v2
 
+    - name: Setup Python Version
+      uses: actions/setup-python@v2
+      with:
+        python-version: 3.9
+
+    - name: Install Python dependencies
+      run: python -m pip install --upgrade pip requests 
+      
     - name: Run Bash Script Test
       run: bash labs/2_lab/script.bash
 
@@ -35,7 +51,15 @@ jobs:
     steps:
     - name: Check out code
       uses: actions/checkout@v2
+    
+    - name: Setup Python Version
+      uses: actions/setup-python@v2
+      with:
+        python-version: 3.9
 
+    - name: Install Python dependencies
+      run: python -m pip install --upgrade pip requests 
+      
     - name: Run Bash Script Test
       run: bash labs/3_lab/script.bash
 
